# ChangeLog for dev-python/formencode
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/formencode/ChangeLog,v 1.34 2015/03/10 14:16:46 idella4 Exp $

*formencode-1.3.0 (10 Mar 2015)

  10 Mar 2015; Ian Delaney <idella4@gentoo.org> +formencode-1.3.0.ebuild,
  formencode-1.2.6-r1.ebuild:
  bump; update deps, unrestrict test phase, upgrade test phase citing upstream
  bug for failures on testing

  01 Feb 2015; Manuel Rüger <mrueg@gentoo.org> -formencode-1.2.6.ebuild:
  Remove old.

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> formencode-1.2.6-r1.ebuild:
  Add support for the new PyPy slotting.

  22 Oct 2013; Fabian Groffen <grobian@gentoo.org> formencode-1.2.6-r1.ebuild:
  Marked ~x64-macos, bug #487670

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> formencode-1.2.6-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*formencode-1.2.6-r1 (03 Jul 2013)

  03 Jul 2013; Ian Delaney <idella4@gentoo.org> +formencode-1.2.6-r1.ebuild:
  revbump; migrate -> distutils-r1, deps of testsuite added but disabled, tests
  set to restrict, depnds on Bug #473154

*formencode-1.2.6 (11 Jan 2013)

  11 Jan 2013; Patrick Lauer <patrick@gentoo.org> +formencode-1.2.6.ebuild:
  Bump

  27 Aug 2011; Jesus Rivero <neurogeek@gentoo.org> formencode-1.2.4.ebuild:
  Change to generic license

  23 Jun 2011; Markos Chandras <hwoarang@gentoo.org> -formencode-1.2.2.ebuild:
  Remove old ebuilds. Requested by Arfrever

  28 May 2011; Brent Baude <ranger@gentoo.org> formencode-1.2.4.ebuild:
  Marking formencode-1.2.4 ppc for bug 365883

  24 May 2011; Markus Meier <maekke@gentoo.org> formencode-1.2.4.ebuild:
  x86 stable, bug #365883

  09 May 2011; Markos Chandras <hwoarang@gentoo.org> formencode-1.2.4.ebuild:
  Stable on amd64 wrt bug #365883

*formencode-1.2.4 (03 Apr 2011)

  03 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +formencode-1.2.4.ebuild:
  Version bump.
