@@ -1,6 +1,9 @@
 # ChangeLog for sci-mathematics/gmp-ecm
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gmp-ecm/ChangeLog,v 1.12 2013/11/19 07:38:58 patrick Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/gmp-ecm/ChangeLog,v 1.13 2015/03/11 04:19:52 patrick Exp $
+
+  11 Mar 2015; Patrick Lauer <patrick@gentoo.org> gmp-ecm-6.4.4-r1.ebuild:
+  Fix prefix paths #466852
 
   19 Nov 2013; Patrick Lauer <patrick@gentoo.org> gmp-ecm-9999.ebuild:
   Adapt live ebuild to upstream changes
