@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/formencode
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/formencode/ChangeLog,v 1.34 2015/03/10 14:16:46 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/formencode/ChangeLog,v 1.35 2015/03/11 04:28:40 idella4 Exp $
+
+  11 Mar 2015; Ian Delaney <idella4@gentoo.org> formencode-1.3.0.ebuild:
+  Re-restrict test phase on discovery that package need be system installed to
+  run testsuite
 
 *formencode-1.3.0 (10 Mar 2015)
 
